@@ -91,6 +91,10 @@ Após a instalação do Xampp, verifique se o Apache e o MySQL estão ativos con
 Rode a Query que está no arquivo banco.sql que se encontra no pacote banco. Verifique se está tudo ok com o banco, caso esteja, abra a classe Conexao.java que está no pacote banco, verifique os campos do nome do usuário e senha, e caso seu usuário ou senha sejam diferentes, substitua-os, se mantiver o mesmo padrão de usuário "root" e estiver sem senha, basta executar a classe que a conexão com o banco será estabelecida.
 ![image](https://user-images.githubusercontent.com/86390616/124399937-49e86f80-dcf5-11eb-8fdf-709a5731196f.png)
 
+Edite no Run Configurations... O valor do VM Arguments, com a seguinte instrução: --module-path ".../JavaFX/lib" --add-modules javafx.controls,javafx.fxml, a qual está demonstrada na imagem abaixo.
+![image](https://user-images.githubusercontent.com/86390616/124399975-90d66500-dcf5-11eb-9d5e-49150d2e9124.png)
+
+
 Na sequência execute a classe Main.java. Se todos os passos anteriores foram seguidos corretamente, surgirá a tela a seguir:
 ![image](https://user-images.githubusercontent.com/86390616/124391744-720da980-dcc8-11eb-8c8f-b20b89b6fe2a.png)
 
